# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.182 2009/04/14 01:56:52 vapier Exp $

*timezone-data-2009f (14 Apr 2009)

  14 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009f.ebuild:
  Version bump #266001 by Rodrigo Severo.

  12 Apr 2009; Brent Baude <ranger@gentoo.org> timezone-data-2009c.ebuild:
  stable ppc64, bug 265522

  11 Apr 2009; nixnut <nixnut@gentoo.org> timezone-data-2009e.ebuild:
  ppc stable #265522

  11 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2009e.ebuild:
  Strip comments and spaces from /etc/timezone as suggested by Alon Bar-Lev
  #265736.

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009c.ebuild:
  alpha/arm/ia64/m68k/s390/sh/x86 stable wrt #265522

  10 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  timezone-data-2009c.ebuild:
  amd64 stable, bug 265522

  09 Apr 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009c.ebuild:
  Stable for HPPA (bug #265522).

  09 Apr 2009; Ferris McCormick <fmccor@gentoo.org>
  timezone-data-2009c.ebuild:
  Sparc stable, Bug #265522.

*timezone-data-2009e (09 Apr 2009)

  09 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009e.ebuild:
  Version bump #265109 by Rodrigo Severo.

*timezone-data-2009d (23 Mar 2009)

  23 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009d.ebuild:
  Version bump #263488 by Rodrigo Severo.

  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009b.ebuild:
  arm/ia64/m68k/s390/sh/sparc/x86 stable wrt #262620

  18 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  timezone-data-2009b.ebuild:
  Stable on alpha, bug #262620

  18 Mar 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009b.ebuild:
  Stable for HPPA (bug #262620).

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> timezone-data-2009b.ebuild:
  Marked ppc/ppc64 stable for bug #262620.
