@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
 DIST tzcode2009b.tar.gz 190156 RMD160 633df8c0e350d68b15d55cfb54131be55133bdfc SHA1 53e62aef41066bb9b55b36451f7df61a0ed29c59 SHA256 4117dbd3864616e8391e79fffe2b4da999f7251763bc77a7b7006df57220400c
 DIST tzcode2009d.tar.gz 190134 RMD160 26db83e9306354ffadf5a1606696b73587b47c7f SHA1 b935ac44d2df7c7bb2abb8d5aeb622dcc23b263b SHA256 3e914ff7d4593030531dd5b73ca5a71d7c0f5d52cb6096f7d6b1d5f720c4bee0
@@ -6,9 +9,18 @@ DIST tzdata2009c.tar.gz 175126 RMD160 8308bd319589efd79159358b35a105c721f80c05 S
 DIST tzdata2009d.tar.gz 176911 RMD160 af183cbeeefdb7eeac0b0f5feb3be81bc897d2f3 SHA1 fdb23d045f0a9458c9e8b9b8e53e7e04a82d6627 SHA256 f884ff8af90824cac55786e4b3a6048af10702a5f15036bf55f33d74704ad102
 DIST tzdata2009e.tar.gz 177453 RMD160 458a30139d4562b27323b103401bf428635e7956 SHA1 e1476d349ddf74af27519757e4712c076a4b9220 SHA256 6f4e88fefd72b9ed9c6fde56ebc434c86cd597114685bf98ae7aab031a8cce8c
 DIST tzdata2009f.tar.gz 177771 RMD160 fafd6f71e48bf77d7e026b6eafc491c4401a9b3c SHA1 b197835925ad34eaa08190e88e04cc515c0c570e SHA256 654b309a0c130a156cc81787f8af4dc9a517d283606f420e89364bc93c83da6c
+DIST tzdata2009g.tar.gz 178224 RMD160 8fa26f1e2a12c8d8602054f3fc3ad5f7cd2aa256 SHA1 c3cb83c022c9846f4be67fc6a2c6d7c42072702f SHA256 da033acc418328edcb32a089c26c1f6a828f596b4f3aa26c9319e3ab19e05073
 EBUILD timezone-data-2009c.ebuild 2966 RMD160 3bf949c574f85142907e3b35ae812e94010483e0 SHA1 60ac8654a0e361858a7de1dc4d550d62ee5f97c5 SHA256 f8c8be5b16b149938fcd1e212bd6ecf2e95be6bab0019331688b4d41905d1106
 EBUILD timezone-data-2009d.ebuild 2974 RMD160 2be83ef89b20669e8345fbed5da1a5a3cce8ddd2 SHA1 15857c5789da3c1a2fd99947782111427ce2a238 SHA256 6f93c93677c09d10ef422412d433a7fccd5c6a82d7d71a8a82e56a9335c3c395
 EBUILD timezone-data-2009e.ebuild 3023 RMD160 82c7ce0655bbc84d0bc73b0d9a35d6cba3015c83 SHA1 72290a3f7eba84614795cdf7bcc20d66e342117e SHA256 2528e05a6b1cf4de7e05dc3de1b8bd95e503b82b8ec1ce3bac9f135b9ad19eca
 EBUILD timezone-data-2009f.ebuild 3028 RMD160 5457b794dfbff4e6b8fa31b4620a503a3d8215c7 SHA1 a7163f7ce1f1453e541587748fe17be794c1c56b SHA256 51232ef2efede801674bcfcfdcbcd87ced450487053043f564481ab44eba834c
-MISC ChangeLog 22879 RMD160 98812a3eb33d19898f17f77800d34fb7ae890287 SHA1 316ad934ec2ea14439cbe7cec203f240955551ff SHA256 34f9fd145d207aef2065cb498ea54d65720e4719284aec64c327f2683cfdb9c1
+EBUILD timezone-data-2009g.ebuild 3028 RMD160 deb4138011d17c42cd0695f6743fbb2c765ed707 SHA1 0d32cfc29bc11d3b609dd60fba4b0392e46a096f SHA256 e24c49598662ef5df646867bd646329e8e67dc064b7495b3d405a5d8d61b9fdd
+MISC ChangeLog 23039 RMD160 d0c5d40d2323d2a086f136f52610e7aa6ca57fc8 SHA1 b1718b06fd9d52c9af3d1f9c99637965e5ec8acf SHA256 e63063ff4a5ea4e96a97ee4986daa5c87d73c05c4eb9921cc77cc46bcd7b3320
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkn4y1wACgkQn/5bYzqsSmF9NwCfUJnzdSTEEHk1OZiVK9PKas91
+OW8An38Koagb+5BJK84RyRond86WBZz2
+=B3CA
+-----END PGP SIGNATURE-----
